@@ -2,6 +2,7 @@ package com.goodcare.server.domain.patient.service;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.goodcare.server.domain.patient.dao.Patient;
 import com.goodcare.server.domain.patient.dao.PatientFile;
 import com.goodcare.server.domain.patient.repository.PatientRepositoryBundle;
 import lombok.Getter;
@@ -17,9 +18,11 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.UUID;
 
@@ -66,38 +69,66 @@ public class PatientAIService {
                 .asText();
     }
 
-    public String getIntraSpeechFromPatientFile(String code, String text) throws IOException, InterruptedException {
-        // PatientFile 조회
-        PatientFile patientFile = patientRepositoryBundle.getPatientFileRepository().findByCode(code)
-                .orElseThrow(() -> new FileNotFoundException("This member has no file: " + code));
+    public byte[] getIntraSpeechFromPatientFile(String code, String text) throws IOException, InterruptedException {
+        // PatientFile 정보를 가져오기
+        PatientFile patientFile = patientRepositoryBundle.getPatientFileRepository()
+                .findByCode(code).orElseThrow(() -> new FileNotFoundException("Patient file not found for code: " + code));
 
-        Path filePath = Paths.get(patientFile.getFilePath());
+        Path filePath = Path.of(patientFile.getFilePath());
+        String filename = patientFile.getFileName();
 
-        // 파일 내용 읽고 Base64로 인코딩
-        byte[] fileBytes = Files.readAllBytes(filePath);
-        String base64FileContent = Base64.getEncoder().encodeToString(fileBytes);
+        System.out.println("File path: " + filePath);
+        System.out.println("File name: " + filename);
 
-        // JSON 형식으로 데이터 구성
-        String jsonBody = String.format(
-                "{\"audio\":\"data:%s;name=%s;base64,%s\",\"text\":\"%s\"}",
-                "audio/mpeg",
-                filePath.getFileName().toString(),
-                base64FileContent,
-                text
-        );
+        if (!Files.exists(filePath)) {
+            throw new FileNotFoundException("File not found at path: " + filePath);
+        }
+
+        // Boundary 생성
+        String boundary = "----Boundary" + UUID.randomUUID();
+
+        // HTTP 요청 본문 구성
+        ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+        try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(byteArrayOutputStream, StandardCharsets.UTF_8))) {
+            // 오디오 파일 추가
+            writer.append("--").append(boundary).append("\r\n");
+            writer.append("Content-Disposition: form-data; name=\"audio\"; filename=\"").append(filename).append("\"\r\n");
+            writer.append("Content-Type: audio/mpeg\r\n\r\n");
+            writer.flush();
+            byteArrayOutputStream.write(Files.readAllBytes(filePath));
+            writer.append("\r\n").flush();
+
+            // 텍스트 필드 추가
+            writer.append("--").append(boundary).append("\r\n");
+            writer.append("Content-Disposition: form-data; name=\"text\"\r\n\r\n");
+            writer.append(text).append("\r\n");
+            writer.flush();
+
+            // 최종 Boundary
+            writer.append("--").append(boundary).append("--").append("\r\n");
+            writer.flush();
+        }
 
         // HTTP 요청 생성
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create("https://api-cloud-function.elice.io/fb0764c6-4aff-4e22-b93f-e51552fefde0/generate"))
-                .header("accept", "application/json")
-                .header("content-type", "application/json")
                 .header("Authorization", "Bearer " + getMlApiKey())
-                .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
+                .header("Content-Type", "multipart/form-data; boundary=" + boundary)
+                .POST(HttpRequest.BodyPublishers.ofByteArray(byteArrayOutputStream.toByteArray()))
                 .build();
 
-        // HTTP 요청 전송
-        HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+        // HTTP 요청 전송 및 응답 처리 (바이트 배열로 응답 받음)
+        HttpResponse<byte[]> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofByteArray());
 
-        return response.body();
+        // 응답 출력 (디버깅용)
+        System.out.println("Response Code: " + response.statusCode());
+
+        // 에러 처리
+        if (response.statusCode() == 415) {
+            System.err.println("415 Unsupported Media Type - Check Content-Type or body structure");
+        }
+
+        // 응답 본문을 바이트 배열로 반환
+        return response.body();  // 바이트 배열 반환
     }
 }
